--- a/rust/slsblogpage2/templates/page.hbs
+++ b/rust/slsblogpage2/templates/page.hbs
@@ -1,5 +1,6 @@
 {{#partial page}}
   <p>Rendered in partial, parent is {{parent}}<p>
+  {{{ content }}}
 {{/partial}}
 {{! remove whitespaces with ~ }}
-{{~> base0~}}
+{{~> layout~}}
