--- a/templates/page.hbs
+++ b/templates/page.hbs
@@ -1,5 +1,14 @@
 {{#partial page}}
-  <p>Rendered in partial, parent is {{parent}}<p>
+  <main class="content" role="main">
+    <article class="{{post_class}}">
+      <header>
+        <h1 class="post-title">{{{title}}}</h1>
+      </header>
+      <section class="post-content">
+      {{{content}}}
+      <br>
+      </section>
+    </article>
+  </main>
 {{/partial}}
-{{! remove whitespaces with ~ }}
-{{~> base0~}}
+{{~> layout~}}
