--- a/templates/page.hbs
+++ b/templates/page.hbs
@@ -1,11 +1,11 @@
 {{#partial page}}
   <main class="content" role="main">
-    <article class="{{post_class}}">
+    <article class="{{blog.post_class}}">
       <header>
-        <h1 class="post-title">{{{title}}}</h1>
+        <h1 class="post-title">{{{post.title}}}</h1>
       </header>
       <section class="post-content">
-      {{{content}}}
+      {{{post.content}}}
       <br>
       </section>
     </article>
