--- a/shared/templates/partials/footer-author.hbs
+++ b/shared/templates/partials/footer-author.hbs
@@ -1,1 +1,1 @@
-<section class="bloginfo">A blog by <a href="mailto:orion@notsafeforproduction.com">Orion Free</a></section>
+<section class="bloginfo">A blog by <a href="https://www.orionfree.com">Orion Free</a></section>
