--- a/shared/templates/layout.hbs
+++ b/shared/templates/layout.hbs
@@ -22,14 +22,14 @@
         <h1 class="blog-subtitle">{{blog.description}}</h1>
     </header>
 
-    {{~#block page}}{{/block~}}
+     {{~> page}}
 
     <footer class="site-footer">
         <div class="inner">
             {{> footer-social}}
             {{> footer-author}}
             <section class="copyright">&copy; {{blog.date}} <a href="{{blog.url}}">{{blog.title}}</a>. All rights reserved</section>
-            <section><a href="https://github.com/epistrephein/Steam">Steam theme</a> for <a class="icon-ghost" href="http://ghost.org/"><span class="hidden">Ghost</span></a> by Tommaso Barbato</section>
+            <section>Based on the <a href="https://github.com/epistrephein/Steam">Steam theme</a> for <a class="icon-ghost" href="http://ghost.org/"><span class="hidden">Ghost</span></a> by Tommaso Barbato</section>
         </div>
     </footer>
 
